--- a/platform-ui/public/templates/player/gameList.html
+++ b/platform-ui/public/templates/player/gameList.html
@@ -49,8 +49,8 @@
                 </div>
             </div>
             <div class="col-md-12 noPad padTop">
-            	<div class="metro">
-            		<div class="tile gameTile" ng-repeat="game in games" ng-click="viewGame(game.identifier)" style="border: 1px solid #eee;box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);">
+            	<div class="metro" ng-show="showGames">
+            		<div ng-if="games.length > 0" class="tile gameTile" ng-repeat="game in games" ng-click="viewGame(game.identifier)" style="border: 1px solid #eee;box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);">
 	    				<div class="tile-content image" style="padding: 15px;">
 	        				<img ng-src="{{game.metadata.appIcon}}" ng-if="game.metadata.appIcon">
 	        				<img src="/img/not_available.jpg" ng-if="!game.metadata.appIcon">
@@ -63,6 +63,9 @@
                             <span class="label fg-black game-status" style="color: green !important; font-weight:bold !important;">{{game.metadata.status}}</span>
     					</div>
 					</div>
+                    <div ng-if="games.length == 0" class="alert alert-info">
+                        No games are defined.
+                    </div>    
             	</div>
             	<div class="col-md-12" ng-if="seeMoreGames">
             		<button class="btn btn-sm btn-primary pull-right" ng-click="nextPage()">See More</button>
