--- a/platform-ui/public/templates/player/learningMap.html
+++ b/platform-ui/public/templates/player/learningMap.html
@@ -79,7 +79,7 @@
                         <h3 class="ng-binding">{{hoveredConcept.microConcepts}}</h3>
                         <span>Micro Concepts</span>
                     </li>
-                    <li>
+                    <li ng-if="false">
                         <h3 class="ng-binding">5</h3>
                         <span>Games</span>
                     </li>
