Learning Map - hover change

--- a/platform-ui/views/includes/left-sidebar.ejs
+++ b/platform-ui/views/includes/left-sidebar.ejs
@@ -1,7 +1,7 @@
 <div id="mainNavMenu" class="NavLeftContainer">
 <ul>
 	<li class="dropdown coachingTab active common_box">
-		<div class="dropdown dropdown-toggle">
+		<div class="dropdown dropdown-toggle" data-toggle="dropdown">
 			<i class="coachingImg"></i>
 			<span class="lefttab"> Learning Map</span>
 		</div>
