use https url for fonts.net script url

--- a/platform-ui/views/includes/player-styles.ejs
+++ b/platform-ui/views/includes/player-styles.ejs
@@ -1,4 +1,4 @@
-<script type="text/javascript" src="http://fast.fonts.net/jsapi/6bb78b32-9b12-4a14-9179-8de98470e4b1.js"></script>
+<script type="text/javascript" src="https://fast.fonts.net/jsapi/6bb78b32-9b12-4a14-9179-8de98470e4b1.js"></script>
 <link rel="stylesheet" href="/css/thirdparty/bootstrap.min.css" type="text/css"/>
 <link rel="stylesheet" href="/css/thirdparty/font-awesome.min.css" type="text/css"/>
 <link rel="stylesheet" href="/css/thirdparty/font-style.css" type="text/css"/>
