AuditRecord and Comments API

--- a/platform-ui/views/includes/header.ejs
+++ b/platform-ui/views/includes/header.ejs
@@ -170,7 +170,7 @@
                     To sign in with Google+ you need to enable access to a your public profile, friend list, email address, birthday, education history and current city. However ekStep will NOT access your friend list or post anything on your timeline automatically.<br/><br/>
                     <span style="font-size: 12px" class="text-muted">Need more information on this? Write to us at <a href="mailto:info@ekstep.org" class="btn-link">info@ekstep.org</a></span>
                     </p>
-                    <p style="font-size: 12px" class="text-muted">By clicking Google, you agree to our <a href="/termsofuse" class="btn-link" target="_blank">Terms of Service</a> and <a href="/privacypolicy" class="btn-link" target="_blank">Privacy Policy</a>.</p>
+                    <p style="font-size: 12px" class="text-muted">By clicking Google, you agree to our <a href="#" class="btn-link" target="_blank">Terms of Service</a> and <a href="#" class="btn-link" target="_blank">Privacy Policy</a>.</p>
                     </div>
                 </div>
             </div>
