--- a/platform-ui/public/css/app/ilimi.css
+++ b/platform-ui/public/css/app/ilimi.css
@@ -1995,7 +1995,8 @@ input.validation-error {
 .screenshotImg {
     display: block; 
     margin-left: auto; 
-    margin-right: auto
+    margin-right: auto;
+    max-height: 500px;
 }
 
 .pad20 {
