--- a/platform-ui/views/includes/player-scripts.ejs
+++ b/platform-ui/views/includes/player-scripts.ejs
@@ -14,6 +14,8 @@
 <script src="/js/thirdparty/underscore.js"></script>
 <script src="/js/thirdparty/string.min.js"></script>
 <script src="/js/thirdparty/jquery.bxslider.min.js"></script>
+<script src="/js/thirdparty/moment.js"></script>
+<script src="/js/thirdparty/livestamp.min.js"></script>
 
 <script src="/js/app/controllers/mainController.js"></script>
 <script src="/js/app/controllers/loginController.js"></script>
