--- a/platform-ui/views/includes/commonTemplates.ejs
+++ b/platform-ui/views/includes/commonTemplates.ejs
@@ -121,14 +121,15 @@
 <div id="{{cat.id}}" class="col-md-12 noPad" ng-repeat="cat in categories">
     <form name="{{cat.id}}Form">
 		<div class="panel panel-default">
-			<div class="panel-heading" role="tab">
-			  	<h3 class="panel-title pageitem" style="padding-left: 20px">
-				  	{{cat.label}}
-			  	</h3>
-			  	<a href="#" ng-if="cat.editable" class="pull-right padRight10" ng-click="cat.editMode = true"><i class="fa fa-edit" ng-show="!cat.editMode"></i></a>
-			  	<a href="#" ng-if="cat.editable" class="pull-right padRight10" ng-click="cat.editMode = false"><i class="fa fa-close" ng-show="cat.editMode"></i></a>
+			<div class="il-sc-header" role="tab">
+                <h2 style="padding-left: 20px">{{cat.label}}</h2>
+            </div>
+            <div class="pull-right marginTop20">
+                <a href="#" ng-if="cat.editable" class="pull-right padRight10" ng-click="cat.editMode = true"><i class="fa fa-edit" ng-show="!cat.editMode"></i></a>
+                <a href="#" ng-if="cat.editable" class="pull-right padRight10" ng-click="cat.editMode = false"><i class="fa fa-close" ng-show="cat.editMode"></i></a>
                 <a href="#" ng-if="cat.id=='comments'" class="pull-right padRight10"><i class="fa fa-edit" ng-click="addComment()"></i></a>
-			</div>
+                <a href="#" ng-if="cat.id=='versions'" class="pull-right padRight10"><i class="fa fa-edit" ng-click="addVersion()"></i></a>
+            </div>
 			<div class="panel-collapse collapse in" role="tabpanel" ng-switch on="cat.id">
 				<div class="panel-body" ng-switch-when="tags">
 					<div class="col-md-12">
