made section collapsable

--- a/platform-ui/public/css/app/custom.css
+++ b/platform-ui/public/css/app/custom.css
@@ -1396,7 +1396,8 @@ li.inputField {
     display: inline-block;
     border-top: 5px solid #09c;
     padding: 0px;
-    min-width: 150px
+    min-width: 150px;
+    cursor: pointer;
 }
 
 .lecture-status ul li {
