fix the title of the current item when we scroll the page

--- a/platform-ui/public/css/app/ilimi.css
+++ b/platform-ui/public/css/app/ilimi.css
@@ -2068,3 +2068,14 @@ input.validation-error {
 }
 /** End Game Page Styles **/
 
+.fix-title-head {
+    position: fixed;
+    z-index: 1000;
+    top: 0;
+    text-align: center;
+    padding-right: 500px;
+    width: 100%;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
