--- a/platform-ui/views/includes/right-sidebar.ejs
+++ b/platform-ui/views/includes/right-sidebar.ejs
@@ -32,12 +32,12 @@
 
 		<div class="il-rt-container recentContent marginBottom20">
 			<div class="il-sc-header il-dd-header pad0">
-				<h3>Related Concepts</h3>
+				<h3>Concepts</h3>
 			</div>
 			<div class="bs-docs-sidebar">
 				<ul ng-if="selectedConcept.relatedConcepts.length == 0">
 					<li>
-						<span style="">related concepts not found</span>
+						<span style="">concepts not found</span>
 					</li>
 				</ul>
 				<nav class="il-rt-notn" ng-if="selectedConcept.relatedConcepts.length > 0">
@@ -53,12 +53,12 @@
 
 		<div class="il-rt-container recentContent marginBottom20">
 			<div class="il-sc-header il-dd-header pad0">
-				<h3>Related Games</h3>
+				<h3>Games</h3>
 			</div>
 			<div class="bs-docs-sidebar">
 				<ul ng-if="selectedConcept.relatedGames.length == 0">
 					<li>
-						<span>related games not found</span>
+						<span>games not found</span>
 					</li>
 				</ul>
 				<nav class="il-rt-notn" ng-if="selectedConcept.relatedGames.length > 0">
